fixed white space issue

--- a/src/components/Ourclients/Ourclients.scss
+++ b/src/components/Ourclients/Ourclients.scss
@@ -2,7 +2,9 @@
 
 
 .ourclients {
-    padding: 10px 150px 30px 150px;
+    display: block;
+    margin-top: 41px;
+    padding: 0 50px;
 }
 .ourclients-heading {
     font-size: 36px;
